# schema-trace

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.sh
alembic/: env.py
app/: admin.py  main.py
app/adaptors/: base.py  django_adaptor.py
app/config/: settings.py
app/db/: base.py  database.py  models.py
app/parsers/: base.py  django_field_extractor.py  django_mapper.py  django_migration.py
app/routers/: events.py  models.py  projects.py
app/schemas/: events.py  fields.py  models.py  project.py  user.py
cli/: __init__.py  client.py  config.py  main.py  scanner.py
examples/: pyproject.toml  typer_ex.py
tests/fixtures/migrations/: 0001_initial.py  0002_user_add_profile_fields.py  0003_auto_20240120_0900.py  0004_post_model.py  __init__.py
