[project]
name = "schema-trace"
version = "0.1.0"
description = ""
authors = [
    {name = "Sasha Krigel",email = "sasha.krigel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "uvicorn>=0.40.0,<0.41.0"
]

[tool.poetry]
packages = [{include = "*", from = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
