[project]
name = "schematrace"
version = "0.1.0"
description = "Track and query database schema evolution across migrations"
authors = [
    {name = "Sasha Krigel", email = "sasha.krigel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "MIT"}
keywords = ["database", "schema", "migrations", "django", "tracking", "sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# CLI dependencies only
dependencies = [
    "click>=8.1.0,<9.0.0",
    "requests>=2.31.0,<3.0.0",
    "rich>=13.7.0,<14.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

# Backend dependencies (for local development/Docker only)
[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "sqlalchemy>=2.0.46,<3.0.0",
    "alembic>=1.18.3,<2.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9,<0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/schema-trace"
Documentation = "https://github.com/yourusername/schema-trace#readme"
Repository = "https://github.com/yourusername/schema-trace"
Issues = "https://github.com/yourusername/schema-trace/issues"

[tool.setuptools.packages.find]
include = ["cli*"]
exclude = ["app*", "tests*", "alembic*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
schematrace = "cli.main:cli"